--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,8 @@
 CC = g++
 FLAGS = -O2 -Wall -Wextra -fPIC -lfmt
 
+PREFIX = /usr/local/
+
 
 
 update: lognest.o
@@ -12,3 +14,8 @@ lognest.o: lognest.cpp
 clear: 
 	rm lognest.o
 
+install:
+	cp ../libLogNest.so ${PREFIX}lib
+
+	mkdir -p ${PREFIX}include/lognest
+	cp lognest.hpp ${PREFIX}include/lognest/lognest.hpp
