--- a/src/Makefile
+++ b/src/Makefile
@@ -1,21 +1,25 @@
 CC = g++
 FLAGS = -O2 -Wall -Wextra -fPIC -lfmt
 
-PREFIX = /usr/local/
-
-
 
 update: lognest.o
-	${CC} -o ../libLogNest.so -shared lognest.o
+	${CC} -o libLogNest.so -shared lognest.o
 
 lognest.o: lognest.cpp
 	${CC} ${FLAGS} -c $^ -o $@
 
 clear: 
-	rm lognest.o
+	rm lognest.o libLogNest.so
 
-install:
-	cp ../libLogNest.so ${PREFIX}lib
+install: update
+	cp -n libLogNest.so /usr/lib/
 
-	mkdir -p ${PREFIX}include/lognest
-	cp lognest.hpp ${PREFIX}include/lognest/lognest.hpp
+
+	mkdir -p /usr/include/lognest/
+	cp -n lognest.hpp /usr/include/lognest/lognest.hpp
+
+uninstall:
+	rm -f /usr/lib/libLogNest.so
+
+	rm -rf /usr/include/lognest/
+
