rewirte it in C cuz cpp bloated

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,25 +1,26 @@
-CC = g++
-FLAGS = -O2 -Wall -Wextra -fPIC -lfmt
+CC = gcc
+FLAGS = -Wall -Wextra 
 
 
 update: lognest.o
-	${CC} -o libLogNest.so -shared lognest.o
+	
+	ar rcs libLogNest.a $^
 
-lognest.o: lognest.cpp
+lognest.o: lognest.c
 	${CC} ${FLAGS} -c $^ -o $@
 
 clear: 
-	rm lognest.o libLogNest.so
-
-install: update
-	cp -n libLogNest.so /usr/lib/
+	rm lognest.o libLogNest.a
 
 
-	mkdir -p /usr/include/lognest/
-	cp -n lognest.hpp /usr/include/lognest/lognest.hpp
+install:
+
+	\cp -n libLogNest.a /usr/lib/ 
+
+	\mkdir -p /usr/include/lognest/
+	\cp -n lognest.h /usr/include/lognest/lognest.h
 
 uninstall:
-	rm -f /usr/lib/libLogNest.so
+	rm -f /usr/lib/libLogNest.a 
 
 	rm -rf /usr/include/lognest/
-
